--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso de Git & Github</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Aprendiendo Git</h1>
-    <p>Mis primeros pasos en el versionado de codigo</p>
+    <p>Mis primeros pasos en el versionado de codigo desde la rama principal</p>
+    <ul>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+        <li>item 4</li>
+        <li>item 5</li>
+    </ul>
 </body>
 </html>
