Agregando los nombre de llas estaciones

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
         <li>item 4</li>
         <li>item 5</li>
     </ul>
+    <ol>
+        <li>estacion del año 1 - Primavera</li>
+        <li>estacion del año 2 - Verano</li>
+        <li>estacion del año 3 - Invierno</li>
+        <li>estacion del año 4 - Otoñoa</li>
+        <li>Aguante jon mircha loco</li>
+    </ol>
     <script src="index.js"></script>
 </body>
 </html>
