agregando esciones del año

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
         <li>item 4</li>
         <li>item 5</li>
     </ul>
+    <ol>
+        <li>estacion del año 1</li>
+        <li>estacion del año 2</li>
+        <li>estacion del año 3</li>
+        <li>estacion del año 4</li>
+        <li>Aguante jon mircha loco</li>
+    </ol>
     <script src="index.js"></script>
 </body>
 </html>
