--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <li>estacion del año 4 - Otoñoa</li>
         <li>Aguante jon mircha loco</li>
     </ol>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem, incidunt similique non repellendus, ratione officia iure dignissimos id aspernatur, enim beatae quidem magnam optio eos! Corrupti, perferendis debitis? Fuga.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo asperiores modi consectetur, in blanditiis, temporibus eius, aut explicabo amet rem architecto quam! Numquam cupiditate similique necessitatibus aspernatur id ea dolorum?</p>
     <script src="index.js"></script>
 </body>
 </html>
