--- a/index.html
+++ b/index.html
@@ -8,23 +8,12 @@
 </head>
 <body>
     <h1>Aprendiendo Git</h1>
-    <p>Mis primeros pasos en el versionado de codigo y aprendiendo a resolver conflictos entre ramas</p>
-    <ul>
-        <li>item 1</li>
-        <li>item 2</li>
-        <li>item 3</li>
-        <li>item 4</li>
-        <li>item 5</li>
-    </ul>
-    <ol>
-        <li>estacion del año 1 - Primavera</li>
-        <li>estacion del año 2 - Verano</li>
-        <li>estacion del año 3 - Invierno</li>
-        <li>estacion del año 4 - Otoñoa</li>
-        <li>Aguante jon mircha loco</li>
-    </ol>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem, incidunt similique non repellendus, ratione officia iure dignissimos id aspernatur, enim beatae quidem magnam optio eos! Corrupti, perferendis debitis? Fuga.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo asperiores modi consectetur, in blanditiis, temporibus eius, aut explicabo amet rem architecto quam! Numquam cupiditate similique necessitatibus aspernatur id ea dolorum?</p>
+    <p>Mis primeros pasos en el versionado de codigo con git y github</p>
+    <p>
+        Quieres dominar el uso de git, mira este enlace <a href="https://jonmircha.com/git" target="_blank">enlace</a>
+    </p>
+    <img src="devops_0.webp" alt="git flow">
+
     <script src="index.js"></script>
 </body>
 </html>
